# TSOverlive

./: .gitignore  .gitlab-ci.yml  ARCHITECTURE.md  CHANGELOG.md  CODE_SIGNING.md  DOCK_TRAY_INFO.md  GITHUB_RELEASE.md  ICON_INSTRUCTIONS.md  QUICK_START.md  README.md  RELEASE_GUIDE.md  RELEASE_NOTES.md  RELEASE_NOTES_v1.1.0.md  RELEASE_PROCESS.md  TAURI_MIGRATION.md  TELEGRAM_PATCH_1.1.2.txt  TELEGRAM_RELEASE.txt  TRAY_ICON_FIX.md  TS3_INTEGRATION.md  TS3_SETUP.md  UPDATER_SETUP.md  UPDATE_GUIDE.md  create-icons.sh  create-tray-icons.sh  generate-keys.sh  generate-updater-json.sh  package.json  updater.json
.cargo/: config.toml
.github/workflows/: build.yml  release.yml
public/: index.html
public/css/: color-picker.css  styles.css
public/js/: app.js  settings.js  test-data-handler.js  ts3-client.js  ts6-client-old.js  ts6-client.js  ui.js  updater.js  window-manager.js
public/js/core/: USAGE_EXAMPLE.js  event-emitter.js  index.js  ts3-controller.js  ts6-controller-new.js  ts6-controller.js  ts6-data-handler.js  ts6-message-handler.js
public/js/parsers/: ts3-parser.js  ts6-parser.js
public/js/services/: user-list-service.js
public/js/utils/: logger.js
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
