[package]
name = "ts6-overlay"
version = "1.0.0"
description = "Оверлей виджет для TeamSpeak 6"
authors = ["Radj"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "global-shortcut-all", "window-set-ignore-cursor-events", "window-set-size", "window-set-position", "window-set-focus", "window-create", "macos-private-api", "system-tray", "shell-open", "window-close", "window-hide", "window-show", "window-start-dragging", "window-unminimize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.20"
futures-util = "0.3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
