[package]
name = "teamspeak-overlive"
version = "1.1.0"
description = "Оверлей виджет для TeamSpeak 6 и 3"
authors = ["Radj"]
license = "MIT"
repository = "https://github.com/RadjCopilot/TSOverlive"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "updater", "global-shortcut-all", "window-set-ignore-cursor-events", "window-set-size", "window-set-position", "window-set-focus", "window-create", "macos-private-api", "system-tray", "shell-open", "window-close", "window-hide", "window-show", "window-start-dragging", "window-unminimize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.20"
futures-util = "0.3"
lazy_static = "1.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
